--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <header>
-        <h1>欢迎来到我的网站</h1>
+        <h1>晚安以珊啦啦啦</h1>
     </header>
     <div class="container">
         <nav>
@@ -43,7 +43,7 @@
         </nav>
         <main>
             <!-- 主要内容 -->
-            <p>这里是网页的主要内容区域。</p>
+            <p>这边没有内容</p>
         </main>
     </div>
     <footer>
